[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2zhihu"
version = "0.16"
description = "convert markdown to zhihu compatible format. https://github.com/drmingdrmer/md2zhihu"
readme = {text = "See: https://github.com/drmingdrmer/md2zhihu", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Zhang Yanpo", email = "drdr.xp@gmail.com"}
]
keywords = ["python", "markdown", "zhihu"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=5.3.1",
    "k3color>=0.1.2",
    "k3down2>=0.1.15",
    "k3fs>=0.1.5",
    "k3git>=0.1.18",
    "k3handy>=0.1.12",
    "urllib3>=1.26.7",
]

[project.optional-dependencies]
test = [
    "pytest",
    "scikit-image",
]

[project.urls]
Homepage = "https://github.com/drmingdrmer/md2zhihu"

[project.scripts]
md2zhihu = "md2zhihu:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["md2zhihu", "md2zhihu.*"]
