[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2zhihu"
version = "0.16"
description = "convert markdown to zhihu compatible format. https://github.com/drmingdrmer/md2zhihu"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zhang Yanpo", email = "drdr.xp@gmail.com"}
]
keywords = ["python", "markdown", "zhihu"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=5.3.1,<7",
    "k3color>=0.1.2,<0.2",
    "k3down2>=0.1.15,<0.2",
    "k3fs>=0.1.5,<0.2",
    "k3git>=0.1.18,<0.2",
    "k3handy>=0.1.12,<0.2",
    "typing_extensions>=4.0,<5",
    "urllib3>=1.26.7,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "scikit-image",
]
dev = [
    "pytest>=7.0",
    "scikit-image",
    "pre-commit",
    "mypy",
    "types-PyYAML",
    "ruff",
]
publish = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/drmingdrmer/md2zhihu"

[project.scripts]
md2zhihu = "md2zhihu:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["md2zhihu", "md2zhihu.*"]
